--- a/html/front-page-content.html
+++ b/html/front-page-content.html
@@ -57,7 +57,7 @@
                     <div class="ducklett-widget-type_brickwork">
                         <div class="ducklett-slider-wrapper">
                             <ul class="ducklett-widget-wrapper ducklett-widget-wrapper--brickwork"
-                                role="offers-brickwork">
+                                role="offers-brickwork" style="margin-bottom: 0px!important;">
                                 <!--start of single special offers -->
                                 <li class="ducklett-widget-wrapper-item manual">
                                     <script async
