--- a/html/meta.html
+++ b/html/meta.html
@@ -1,3 +1,9 @@
+<script type="text/javascript">
+	if (window.location.protocol == "http:") {
+		var restOfUrl = window.location.href.substr(5);
+		window.location = "https:" + restOfUrl;
+	}
+</script>
 <title>tickeBook.com</title>
 
 <!-- Latest compiled and minified CSS -->
