--- a/html/header.html
+++ b/html/header.html
@@ -1,3 +1,12 @@
+<div id="fb-root"></div>
+<script>(function (d, s, id) {
+	var js, fjs = d.getElementsByTagName(s)[0];
+	if (d.getElementById(id)) return;
+	js = d.createElement(s);
+	js.id = id;
+	js.src = "//connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.9";
+	fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <div class="background-wrapper">
     <div class="background"></div>
     <div class="background2"></div>
@@ -25,6 +34,11 @@
                  style=" margin-top: 5px;">
         </a>
     </div>
+    <div style="float: right">
+        <a href="whatsapp://send" data-text="tickebook.com is a brand of Safe Escape Holidays."
+           data-href="https://www.tickebook.com/" class="wa_btn wa_btn_s" style="display:none">Share</a>
+    </div>
+</div>
 </div>
 
 
