--- a/html/header.html
+++ b/html/header.html
@@ -1,3 +1,9 @@
+<meta property="og:title" content="tickeBook.com"/>
+<meta property="og:url" content="https://www.tickebook.com"/>
+<meta property="og:description" content="tickeBook.com is a brand of Safe Escape Holidays">
+<meta property="og:image" content="https://parloti.github.io/tickebook.com/img/favicon-300x300.jpg">
+<meta property="og:type" content="article"/>
+
 <div id="fb-root"></div>
 <script>(function (d, s, id) {
 	var js, fjs = d.getElementsByTagName(s)[0];
@@ -24,21 +30,22 @@
 </nav>
 
 <div id="brand1"
-     style="color: white; font-size: 14px;padding: 10px;display: inline-flex;">
-    <div style="margin-right: 10px;">tickebook.com is a brand of<br>Safe Escape Holidays
+     style="color: white; font-size: 14px;padding: 10px;display: flex; justify-content: space-between;">
+    <div style="display: inline-flex;">
+        <div style="margin-right: 10px;">tickebook.com is a brand of<br>Safe Escape Holidays
+        </div>
+        <div>
+            <a href="https://www.safeescapeholidays.com" target="_blank">
+                <img src="https://parloti.github.io/tickebook.com/img/safeescapeholidays-logo.png" width="55px"
+                     height="35px"
+                     style=" margin-top: 5px;">
+            </a>
+        </div>
     </div>
     <div>
-        <a href="https://www.safeescapeholidays.com" target="_blank">
-            <img src="https://parloti.github.io/tickebook.com/img/safeescapeholidays-logo.png" width="55px"
-                 height="35px"
-                 style=" margin-top: 5px;">
-        </a>
-    </div>
-    <div style="float: right">
         <a href="whatsapp://send" data-text="tickebook.com is a brand of Safe Escape Holidays."
            data-href="https://www.tickebook.com/" class="wa_btn wa_btn_s" style="display:none">Share</a>
     </div>
-</div>
 </div>
 
 
